--- a/index-angel.html
+++ b/index-angel.html
@@ -47,10 +47,10 @@
       }
     </style>
   </head>
-  <body class="bg-black text-gray-300 antialiased">
+  <body class="bg-[#181818] text-gray-300 antialiased">
     <header
       id="header"
-      class="bg-black border-b border-gray-800 fixed top-0 left-0 right-0 z-50"
+      class="bg-[#181818] border-b border-gray-800 fixed top-0 left-0 right-0 z-50"
     >
       <div
         class="container mx-auto px-6 py-4 flex justify-between items-center"
@@ -65,7 +65,7 @@
         <div class="flex items-center space-x-6">
           <a
             href="#contact"
-            class="bg-transparent text-[#99C4FE] border-2 border-[#99C4FE] font-semibold px-6 py-3 text-base hover:bg-[#99C4FE] hover:text-black transition-colors duration-300 rounded-lg"
+            class="bg-transparent text-white border-2 border-[#3F5FDD] font-semibold px-6 py-3 text-base hover:bg-[#3F5FDD] hover:text-white transition-colors duration-300 rounded-lg"
             >Meet the team</a
           >
         </div>
@@ -73,7 +73,7 @@
     </header>
 
     <main>
-      <section class="min-h-screen flex items-center bg-black pt-20">
+      <section class="min-h-screen flex items-center bg-[#181818] pt-20">
         <div class="container mx-auto px-6 text-center">
           <div class="max-w-5xl mx-auto">
             <h1
@@ -101,28 +101,25 @@
       </section>
 
       <section
-        class="min-h-screen flex items-center bg-black border-y border-gray-800"
+        class="min-h-screen flex items-center bg-[#181818] border-y border-gray-800"
       >
         <div class="container mx-auto px-6 text-center">
           <div class="max-w-5xl mx-auto fade-in-section">
             <h2
               class="text-4xl sm:text-5xl md:text-7xl font-bold text-white mb-12"
             >
-              Finding
-              <strong class="gradient-text">a good team</strong> shouldn't be so
-              hard
+              Finding a good team shouldn't be so hard
             </h2>
             <p class="text-xl sm:text-2xl md:text-4xl text-gray-400">
               Leaders with great ideas shouldn't have to struggle to find a
-              competent, high-performing team
-              <strong class="gradient-text">to execute their vision.</strong>
+              competent, high-performing team to execute their vision.
             </p>
             <div
               class="mt-24 flex flex-col sm:flex-row items-center justify-center gap-6"
             >
               <a
                 href="case-study.html"
-                class="bg-transparent border-2 border-white text-white font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm:text-xl hover:bg-white hover:text-black transition-colors duration-300 inline-block rounded-2xl"
+                class="bg-transparent border-2 border-white text-white font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm:text-xl hover:bg-white hover:text-[#181818] transition-colors duration-300 inline-block rounded-2xl"
                 >View Case Studies</a
               >
               <a
@@ -135,7 +132,9 @@
         </div>
       </section>
 
-      <section class="py-20 md:py-32 bg-black">
+      <section
+        class="min-h-dvh py-20 md:py-32 bg-[#181818] border-y border-gray-800"
+      >
         <div class="container mx-auto px-6">
           <div class="text-center max-w-4xl mx-auto mb-16 fade-in-section">
             <h2 class="text-4xl md:text-6xl font-bold text-white">
@@ -153,16 +152,12 @@
               <div class="mb-5">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 640 640"
                   class="h-12 w-12 text-[#99C4FE]"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
+                  fill="currentColor"
                 >
                   <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547a2 2 0 00-.547 1.806l.477 2.387a6 6 0 00.517 3.86l.158.318a6 6 0 00.517 3.86l2.387.477a2 2 0 001.806-.547a2 2 0 00.547-1.806l-.477-2.387a6 6 0 00-.517-3.86l-.158-.318a6 6 0 00-.517-3.86l-2.387-.477a2 2 0 00-1.806.547a2 2 0 00-.547 1.806l.477 2.387a6 6 0 00.517 3.86l.158.318a6 6 0 00.517 3.86L15.428 6.572a2 2 0 001.806-.547a2 2 0 00.547-1.806l-.477-2.387a6 6 0 00-.517-3.86l-.158-.318a6 6 0 00-.517-3.86L6.572 15.428z"
+                    d="M288 64C323.3 64 352 85.5 352 112C352 122.4 347.6 132 340 139.9C333.4 146.8 328 155.2 328 164.8C328 179.8 340.2 192 355.2 192L400 192C426.5 192 448 213.5 448 240L448 284.8C448 299.8 460.2 312 475.2 312C484.7 312 493.2 306.6 500.1 300C508 292.5 517.6 288 528 288C554.5 288 576 316.7 576 352C576 387.3 554.5 416 528 416C517.6 416 507.9 411.6 500.1 404C493.2 397.4 484.8 392 475.2 392C460.2 392 448 404.2 448 419.2L448 528C448 554.5 426.5 576 400 576L343.2 576C330.4 576 320 565.6 320 552.8C320 543.6 325.8 535.5 333.2 530C344.8 521.3 352 509.3 352 496C352 469.5 323.3 448 288 448C252.7 448 224 469.5 224 496C224 509.3 231.2 521.3 242.8 530C250.2 535.5 256 543.5 256 552.8C256 565.6 245.6 576 232.8 576L112 576C85.5 576 64 554.5 64 528L64 407.2C64 394.4 74.4 384 87.2 384C96.4 384 104.5 389.8 110 397.2C118.7 408.8 130.7 416 144 416C170.5 416 192 387.3 192 352C192 316.7 170.5 288 144 288C130.7 288 118.7 295.2 110 306.8C104.5 314.2 96.5 320 87.2 320C74.4 320 64 309.6 64 296.8L64 240C64 213.5 85.5 192 112 192L220.8 192C235.8 192 248 179.8 248 164.8C248 155.3 242.6 146.8 236 139.9C228.5 132 224 122.4 224 112C224 85.5 252.7 64 288 64z"
                   />
                 </svg>
               </div>
@@ -183,16 +178,12 @@
               <div class="mb-5">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 640 640"
                   class="h-12 w-12 text-[#99C4FE]"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
+                  fill="currentColor"
                 >
                   <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                    d="M320.3 192L235.7 51.1C229.2 40.3 215.6 36.4 204.4 42L117.8 85.3C105.9 91.2 101.1 105.6 107 117.5L176.6 256.6C146.5 290.5 128.3 335.1 128.3 384C128.3 490 214.3 576 320.3 576C426.3 576 512.3 490 512.3 384C512.3 335.1 494 290.5 464 256.6L533.6 117.5C539.5 105.6 534.7 91.2 522.9 85.3L436.2 41.9C425 36.3 411.3 40.3 404.9 51L320.3 192zM351.1 334.5C352.5 337.3 355.1 339.2 358.1 339.6L408.2 346.9C415.9 348 418.9 357.4 413.4 362.9L377.1 398.3C374.9 400.5 373.9 403.5 374.4 406.6L383 456.5C384.3 464.1 376.3 470 369.4 466.4L324.6 442.8C321.9 441.4 318.6 441.4 315.9 442.8L271.1 466.4C264.2 470 256.2 464.2 257.5 456.5L266.1 406.6C266.6 403.6 265.6 400.5 263.4 398.3L227.1 362.9C221.5 357.5 224.6 348.1 232.3 346.9L282.4 339.6C285.4 339.2 288.1 337.2 289.4 334.5L311.8 289.1C315.2 282.1 325.1 282.1 328.6 289.1L351 334.5z"
                   />
                 </svg>
               </div>
@@ -245,8 +236,7 @@
           </div>
         </div>
       </section>
-
-      <section class="py-20 md:py-32 bg-black min-h-dvh flex items-center">
+      <section class="py-20 md:py-32 bg-[#181818] min-h-dvh flex items-center">
         <div class="container mx-auto p-6">
           <div
             class="flex flex-col md:grid md:grid-cols-2 md:gap-16 md:items-center"
@@ -394,7 +384,7 @@
 
       <section
         id="process"
-        class="py-20 md:py-32 bg-black border-y border-gray-800"
+        class="py-20 md:py-32 bg-[#181818] border-y border-gray-800"
       >
         <div class="container mx-auto px-6">
           <div class="grid lg:grid-cols-3 gap-12 items-start">
@@ -414,16 +404,14 @@
               <div class="mt-6 fade-in-section">
                 <a
                   href="#contact"
-                  class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl"
+                  class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block rounded-2xl"
                   >Introduction Call</a
                 >
               </div>
             </div>
 
-            <div class="lg:col-span-2 grid sm:grid-cols-2 gap-8">
-              <div
-                class="bg-gray-900 p-8 rounded-xl border border-gray-800 fade-in-section"
-              >
+            <div class="lg:col-span-2 grid sm:grid-cols-2 gap-x-8 gap-y-12">
+              <div class="fade-in-section">
                 <div class="text-5xl font-black text-[#99C4FE]">01</div>
                 <h3 class="text-2xl font-bold text-white mt-4 mb-2">
                   Introduction Call
@@ -434,9 +422,7 @@
                 </p>
               </div>
 
-              <div
-                class="bg-gray-900 p-8 rounded-xl border border-gray-800 fade-in-section"
-              >
+              <div class="fade-in-section">
                 <div class="text-5xl font-black text-[#99C4FE]">02</div>
                 <h3 class="text-2xl font-bold text-white mt-4 mb-2">
                   Clarify the Why
@@ -447,9 +433,7 @@
                 </p>
               </div>
 
-              <div
-                class="bg-gray-900 p-8 rounded-xl border border-gray-800 fade-in-section"
-              >
+              <div class="fade-in-section">
                 <div class="text-5xl font-black text-[#99C4FE]">03</div>
                 <h3 class="text-2xl font-bold text-white mt-4 mb-2">
                   Proposal
@@ -460,9 +444,7 @@
                 </p>
               </div>
 
-              <div
-                class="bg-gray-900 p-8 rounded-xl border border-gray-800 fade-in-section"
-              >
+              <div class="fade-in-section">
                 <div class="text-5xl font-black text-[#99C4FE]">04</div>
                 <h3 class="text-2xl font-bold text-white mt-4 mb-2">
                   Build Mode: ON
@@ -473,9 +455,7 @@
                 </p>
               </div>
 
-              <div
-                class="bg-gray-900 p-8 rounded-xl border border-gray-800 fade-in-section"
-              >
+              <div class="fade-in-section">
                 <div class="text-5xl font-black text-[#99C4FE]">05</div>
                 <h3 class="text-2xl font-bold text-white mt-4 mb-2">Pulse</h3>
                 <p class="text-gray-400">
@@ -484,9 +464,7 @@
                 </p>
               </div>
 
-              <div
-                class="bg-gray-900 p-8 rounded-xl border border-gray-800 fade-in-section"
-              >
+              <div class="fade-in-section">
                 <div class="text-5xl font-black text-[#99C4FE]">06</div>
                 <h3 class="text-2xl font-bold text-white mt-4 mb-2">
                   The Quality Gate
@@ -497,73 +475,18 @@
                 </p>
               </div>
 
-              <div
-                class="bg-gray-900 p-8 rounded-xl border border-gray-800 sm:col-span-2 fade-in-section"
-              >
-                <div class="sm:flex sm:items-start sm:gap-6">
-                  <div>
-                    <div class="text-5xl font-black text-[#99C4FE]">07</div>
-                    <h3 class="text-2xl font-bold text-white mt-4 mb-2">
-                      Beyond Launch
-                    </h3>
-                  </div>
-                  <p class="text-gray-400 sm:mt-14">
-                    With your solution live, our focus shifts to ensuring its
-                    ongoing success. We provide robust support and proactive
-                    monitoring, turning system insights into actionable
-                    intelligence that informs your next strategic move.
-                  </p>
-                </div>
+              <div class="sm:col-span-2 fade-in-section">
+                <div class="text-5xl font-black text-[#99C4FE]">07</div>
+                <h3 class="text-2xl font-bold text-white mt-4 mb-2">
+                  Beyond Launch
+                </h3>
+                <p class="text-gray-400">
+                  With your solution live, our focus shifts to ensuring its
+                  ongoing success. We provide robust support and proactive
+                  monitoring, turning system insights into actionable
+                  intelligence that informs your next strategic move.
+                </p>
               </div>
-            </div>
-
-            <div class="lg:hidden mt-12 flex flex-col items-center">
-              <div class="flex items-center gap-4">
-                <img
-                  src="circle.png"
-                  alt="Geometric Shape 1"
-                  class="h-24 w-auto mt-4 fade-in-section"
-                  style="
-                    transition-delay: 100ms;
-                    filter: invert(1) opacity(0.8);
-                  "
-                />
-                <img
-                  src="top_right.png"
-                  alt="Geometric Shape 2"
-                  class="h-24 w-auto mt-4 fade-in-section"
-                  style="
-                    transition-delay: 150ms;
-                    filter: invert(1) opacity(0.8);
-                  "
-                />
-              </div>
-              <div class="flex items-center gap-4">
-                <img
-                  src="bottom_left.png"
-                  alt="Geometric Shape 3"
-                  class="h-24 w-auto mt-4 fade-in-section"
-                  style="
-                    transition-delay: 100ms;
-                    filter: invert(1) opacity(0.8);
-                  "
-                />
-                <img
-                  src="bottom_right.png"
-                  alt="Geometric Shape 4"
-                  class="h-24 w-auto mt-4 fade-in-section"
-                  style="
-                    transition-delay: 150ms;
-                    filter: invert(1) opacity(0.8);
-                  "
-                />
-              </div>
-              <img
-                src="base.png"
-                alt="Geometric Shape 5"
-                class="w-56 mt-4 fade-in-section"
-                style="transition-delay: 100ms; filter: invert(1) opacity(0.8)"
-              />
             </div>
           </div>
         </div>
@@ -571,7 +494,7 @@
     </main>
 
     <footer
-      class="bg-black text-gray-300 border-t border-gray-800 min-h-screen flex items-center"
+      class="bg-[#181818] text-gray-300 border-t border-gray-800 min-h-screen flex items-center"
     >
       <div class="container mx-auto px-6 py-24">
         <div class="grid grid-cols-1 md:grid-cols-10 gap-16">
@@ -711,7 +634,7 @@
 
     <div
       id="contact-panel"
-      class="fixed inset-y-0 right-0 z-[60] w-full max-w-5xl bg-black shadow-xl transform translate-x-full transition-transform duration-500 ease-in-out hidden"
+      class="fixed inset-y-0 right-0 z-[60] w-full max-w-5xl bg-[#181818] shadow-xl transform translate-x-full transition-transform duration-500 ease-in-out hidden"
     >
       <div class="relative h-full flex flex-col">
         <div class="absolute top-0 right-0 pt-6 pr-6">
@@ -736,7 +659,7 @@
           </button>
         </div>
         <div class="flex-grow grid grid-cols-1 md:grid-cols-2">
-          <div class="bg-gray-900 p-8 md:p-12 flex flex-col justify-center">
+          <div class="bg-[#0A1A62] p-8 md:p-12 flex flex-col justify-center">
             <h3 class="text-3xl font-bold text-white mb-6">
               What happens next?
             </h3>
@@ -745,7 +668,7 @@
                 <h4 class="text-xl font-bold text-white">
                   1. Introduction Call
                 </h4>
-                <p class="text-lg text-gray-400 mt-2">
+                <p class="text-lg text-gray-300 mt-2">
                   We hold a structured, two-way conversation to understand your
                   vision, challenges, and goals. We'll provide a transparent
                   overview of our process, ensuring we both have a confident
@@ -761,7 +684,7 @@
             </div>
           </div>
 
-          <div class="p-8 md:p-12 flex flex-col justify-center">
+          <div class="bg-[#181818] p-8 md:p-12 flex flex-col justify-center">
             <h2 class="text-3xl font-bold text-white mb-2">
               Think we can help?
             </h2>
@@ -828,7 +751,7 @@
 
     <div
       id="overlay"
-      class="fixed inset-0 z-50 bg-black opacity-0 hidden transition-opacity duration-500 ease-in-out"
+      class="fixed inset-0 z-50 bg-[#181818] opacity-0 hidden transition-opacity duration-500 ease-in-out"
     ></div>
 
     <script>
