--- a/index.html
+++ b/index.html
@@ -279,46 +279,46 @@
     </div>
 </footer>
 
-<div id="contact-panel" class="fixed inset-y-0 right-0 z-[9999] w-full max-w-5xl bg-[#181818] shadow-xl transform translate-x-full transition-transform duration-500 ease-in-out hidden overflow-y-auto">
+<div id="contact-panel" class="fixed inset-y-0 right-0 z-[9999] w-full max-w-5xl bg-white shadow-xl transform translate-x-full transition-transform duration-500 ease-in-out hidden overflow-y-auto">
     <div class="relative h-full flex flex-col">
         <div class="absolute top-0 right-0 pt-6 pr-6">
-            <button aria-label="Close panel" id="close-panel-btn" class="text-gray-400 hover:text-white transition-colors">
+            <button aria-label="Close panel" id="close-panel-btn" class="text-gray-500 hover:text-gray-800 transition-colors">
                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
             </button>
         </div>
         <div class="flex-grow grid grid-cols-1 md:grid-cols-2">
-            <div class="bg-blue-900/20 p-8 md:p-12 flex flex-col justify-center">
-                <h3 class="text-3xl font-bold text-white mb-6">What happens next?</h3>
+            <div class="bg-gray-50 p-8 md:p-12 flex flex-col justify-center">
+                <h3 class="text-3xl font-bold text-gray-900 mb-6">What happens next?</h3>
                 <div class="space-y-6">
                     <div>
-                        <h4 class="text-xl font-bold text-white" id="contact">1. Introduction Call</h4>
-                        <p class="text-lg text-gray-300 mt-2">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
+                        <h4 class="text-xl font-bold text-gray-800" id="contact">1. Introduction Call</h4>
+                        <p class="text-lg text-gray-600 mt-2">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
                     </div>
-                    <div class="pt-4 border-t border-gray-700">
+                    <div class="pt-4 border-t border-gray-200">
                         <p class="text-sm text-gray-500">A member of our team will reach out within one business day to schedule your call.</p>
                     </div>
                 </div>
             </div>
-            <div class="bg-[#181818] p-8 md:p-12 flex flex-col justify-center">
-                <h2 class="text-3xl font-bold text-white mb-2">Think we can help?</h2>
-                <p class="text-xl text-gray-400 mb-8">Share the challenge you’re facing or the outcome you’re aiming for, and let’s get started.</p>
+            <div class="bg-white p-8 md:p-12 flex flex-col justify-center">
+                <h2 class="text-3xl font-bold text-gray-900 mb-2">Think we can help?</h2>
+                <p class="text-xl text-gray-600 mb-8">Share the challenge you’re facing or the outcome you’re aiming for, and let’s get started.</p>
                 <form method="POST" action="#" aria-label="Contact form" id="contact-form">
                     <div class="space-y-6">
                         <div>
-                            <label for="full-name" class="block text-sm font-medium text-gray-400">Full Name</label>
-                            <input type="text" name="fullName" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
+                            <label for="full-name" class="block text-sm font-medium text-gray-700">Full Name</label>
+                            <input type="text" name="fullName" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
                         </div>
                         <div>
-                            <label for="contact-info" class="block text-sm font-medium text-gray-400">Email</label>
-                            <input type="email" name="contactInfo" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
+                            <label for="contact-info" class="block text-sm font-medium text-gray-700">Email</label>
+                            <input type="email" name="contactInfo" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
                         </div>
                         <div>
-                            <label for="message" class="block text-sm font-medium text-gray-400">What do you want to build?</label>
-                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"></textarea>
+                            <label for="message" class="block text-sm font-medium text-gray-700">What do you want to build?</label>
+                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"></textarea>
                         </div>
                     </div>
                     <div class="mt-8">
-                        <button type="submit" class="w-full border-2 border-white text-black font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm:text-xl bg-white hover:opacity-80 transition-opacity duration-300 inline-block rounded-2xl">Send</button>
+                        <button type="submit" class="w-full text-white font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm:text-xl bg-gray-800 hover:bg-gray-900 transition-colors duration-300 inline-block rounded-2xl">Send</button>
                     </div>
                 </form>
             </div>
@@ -386,8 +386,8 @@
             const formContainer = form.parentElement;
             formContainer.innerHTML = `
                     <div class="text-center h-full flex flex-col justify-center">
-                        <h2 class="text-3xl font-bold text-white mb-4">Thank You!</h2>
-                        <p class="text-xl text-gray-300">We've received your message and will be in touch shortly.</p>
+                        <h2 class="text-3xl font-bold text-gray-900 mb-4">Thank You!</h2>
+                        <p class="text-xl text-gray-600">We've received your message and will be in touch shortly.</p>
                     </div>
                 `;
             setTimeout(() => closePanel(true), 2500);
