--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="md:hidden text-center">
                     <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-lg w-full md:w-auto">Let's Talk</a>
                 </div>
-                <div class="flex flex-wrap items-center justify-center gap-x-16 gap-y-8 mt-20">
+                <div class="hidden md:flex flex-wrap items-center justify-center gap-x-16 gap-y-8 mt-20">
                     <img src="siemens-logo-gray.png" alt="Siemens Logo" class="h-14 filter" style="filter: invert(1)" />
                     <img src="i2sl-logo.png" alt="I2SL Logo" class="h-14 filter" style="filter: invert(1)" />
                     <img src="aircuity_logo.png" alt="Aircuity Logo" class="h-14 filter" style="filter: invert(1)" />
@@ -306,15 +306,15 @@
                     <div class="space-y-6">
                         <div>
                             <label for="full-name" class="block text-sm font-medium text-gray-700">Full Name</label>
-                            <input type="text" name="fullName" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
+                            <input type="text" name="fullName" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-black focus:border-black text-lg"/>
                         </div>
                         <div>
                             <label for="contact-info" class="block text-sm font-medium text-gray-700">Email</label>
-                            <input type="email" name="contactInfo" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
+                            <input type="email" name="contactInfo" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-black focus:border-black text-lg"/>
                         </div>
                         <div>
                             <label for="message" class="block text-sm font-medium text-gray-700">What do you want to build?</label>
-                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"></textarea>
+                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 text-gray-900 rounded-lg shadow-sm focus:ring-black focus:border-black text-lg"></textarea>
                         </div>
                     </div>
                     <div class="mt-8">
