--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-black text-white leading-tight mb-6 fade-in-section">Your External Dev Team with <span class="gradient-text">In-House Drive</span></h1>
                 <p class="text-xl sm:text-2xl md:text-3xl text-gray-300 max-w-4xl mx-auto fade-in-section" style="transition-delay: 150ms">Build extraordinary software with a partner who shares your standards</p>
                 <div class="mt-16 text-center fade-in-section">
-                    <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Get Started</a>
+                    <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Get Started</a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white mb-6">Finding a good team shouldn't <br class="hidden lg:block"> be so hard</h2>
                 <p class="text-xl sm:text-2xl md:text-3xl text-gray-300">Leaders with great ideas shouldn't have to struggle to find a competent, high-performing team to execute their vision</p>
                 <div class="mt-16 text-center fade-in-section">
-                    <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Let's Discuss</a>
+                    <a href="#contact" class=" whitespace-nowrap  bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Let's Discuss</a>
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="mt-16 text-center fade-in-section">
-                <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Meet the Team</a>
+                <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Meet the Team</a>
             </div>
         </div>
     </section>
@@ -116,13 +116,13 @@
                 <div class="order-first md:order-1 fade-in-section text-center md:text-left">
                     <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight text-center md:text-left">We know that creating a great product is complicated</h2>
                     <div class="text-left fade-in-section mt-16 md:inline-block hidden">
-                        <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 w-full md:w-auto rounded-lg">Let's Talk</a>
+                        <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 w-full md:w-auto rounded-lg">Let's Talk</a>
                     </div>
                 </div>
             </div>
             <div class="mt-12 md:mt-20 fade-in-section">
                 <div class="md:hidden text-center">
-                    <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-lg w-full md:w-auto">Let's Talk</a>
+                    <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-lg w-full md:w-auto">Let's Talk</a>
                 </div>
                 <div class="hidden md:flex flex-wrap items-center justify-center gap-x-16 gap-y-8 mt-20">
                     <img src="siemens-logo-gray.png" alt="Siemens Logo" class="h-14 filter" style="filter: invert(1)" />
@@ -140,7 +140,7 @@
                     <h2 class="text-4xl font-bold text-white sm:text-5xl md:text-6xl fade-in-section">Our proven process</h2>
                     <p class="mt-6 text-xl text-gray-300 fade-in-section" style="transition-delay: 100ms">From initial idea to final launch, we've engineered a process that ensures clarity, predictability, and quality at every step. This is how we build extraordinary software, together.</p>
                     <div class="hidden mt-8 lg:block fade-in-section">
-                        <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block rounded-lg">Introduction Call</a>
+                        <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block rounded-lg">Introduction Call</a>
                     </div>
                 </div>
                 <div class="lg:col-span-2">
@@ -225,7 +225,7 @@
                 </div>
             </div>
             <div class="flex items-center justify-center mt-12 space-x-6 lg:hidden">
-                <a href="#contact" class="bg-[#3F5FDD] whitespace-nowrap text-white text-center font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Introduction Call</a>
+                <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] whitespace-nowrap text-white text-center font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Introduction Call</a>
             </div>
         </div>
     </section>
@@ -236,8 +236,8 @@
                 <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white mb-8">The Partner You've Been Searching For...</h2>
                 <p class="mb-12 text-[30px] text-gray-300">The search for a capable dev partner shouldn't end in frustration and chaos. We've designed a clear path for leaders who are ready to stop micromanaging and start building the extraordinary software their vision demands.</p>
                 <div class="flex flex-col items-center justify-center gap-6 sm:flex-row">
-                    <a href="#contact" class="bg-[#3F5FDD] whitespace-nowrap text-white text-center font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Get Started</a>
-                    <a href="/landingpage/closure.html" class="bg-transparent whitespace-nowrap border-2 border-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 hover:bg-[#3F5FDD] transition-colors duration-300 sm:text-xl inline-block w-full md:w-auto rounded-lg">Read More</a>
+                    <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] whitespace-nowrap text-white text-center font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Get Started</a>
+                    <a href="/landingpage/closure.html" class=" whitespace-nowrap bg-transparent whitespace-nowrap border-2 border-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 hover:bg-[#3F5FDD] transition-colors duration-300 sm:text-xl inline-block w-full md:w-auto rounded-lg">Read More</a>
                 </div>
             </div>
         </div>
