--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <a href="#contact" class=" whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-lg w-full md:w-auto">Let's Talk</a>
                 </div>
                 <div class="hidden md:flex flex-wrap items-center justify-center gap-x-16 gap-y-8 mt-20">
-                    <img src="siemens-logo-gray.png" alt="Siemens Logo" class="h-14 filter" style="filter: invert(1)" />
+                    <img src="siemens-logo.png" alt="Siemens Logo" class="h-14 filter" style="filter: invert(1)" />
                     <img src="i2sl-logo.png" alt="I2SL Logo" class="h-14 filter" style="filter: invert(1)" />
                     <img src="aircuity_logo.png" alt="Aircuity Logo" class="h-14 filter" style="filter: invert(1)" />
                 </div>
