--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <meta name="keywords" content="external development team, software development, custom software, web development, mobile apps, digital solutions, tech consulting" />
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <meta property="og:title" content="Stackit | External Dev Team with In-House Drive" />
+    <meta property="og:description" content="Build extraordinary software with a partner who shares your standards. Stackit provides an external development team with in-house drive and dedication." />
+    <meta property="og:image" content="https://www.stackitgroup.com/stackit-social-share-image.png" />
+    <meta property="og:url" content="https://www.stackitgroup.com/" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@stackitgroup" />
+    <meta name="twitter:title" content="Stackit | External Dev Team with In-House Drive" />
+    <meta name="twitter:description" content="Build extraordinary software with a partner who shares your standards. Stackit provides an external development team with in-house drive and dedication." />
+    <meta name="twitter:image" content="https://www.stackitgroup.com/stackit-social-share-image.png" />
+
+
     <title>Helping high-growth leaders innovate at speed with the discipline & collaboration of an in-house team</title>
     <!-- Add this line for your favicon -->
     <link rel="icon" href="stackit-favicon.ico" type="image/png" />
